syntax = "proto3";
package com.innowise.authservice.generated;

service AuthService {
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message DeleteUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  string id = 1;
}